Fixed height issue on mobile on work page

--- a/pages/work/index.module.css
+++ b/pages/work/index.module.css
@@ -9,7 +9,7 @@
 
 .timelineContainer {
   position: relative;
-  height: 500px;
+  height: 800px;
 }
 
 .timeline {
